--- a/example.wrangler.toml
+++ b/example.wrangler.toml
@@ -1,6 +1,6 @@
-name = "mirai-v14"
+name = "..."
 main = "./src/server.js"
-compatibility_date = "2023-08-23"
+compatibility_date = "..."
 
 # [secrets]
 # DISCORD_TOKEN
