--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "..."
+name = "mirai-v14"
 main = "./src/server.js"
-compatibility_date = "..."
+compatibility_date = "2023-08-23"
 
 # [secrets]
 # DISCORD_TOKEN
