--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "lint": "eslint '**/*.js'",
     "register": "node src/register.js",
     "publish": "wrangler deploy",
-    "sync": "npx wrangler deploy"
+    "sync": "npx slash-up sync",
+    "deploy": "npx slash-up sync && npx wrangler deploy"
   },
   "keywords": [],
   "author": "Justin Beckwith <justin.beckwith@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/builders": "^1.8.2",
     "discord-interactions": "^4.0.0",
     "itty-router": "^5.0.9",
     "slash-create": "^6.1.4"
