--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "fumi",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "bot",
   "type": "module",
-  "main": "src/server.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "wrangler dev",
     "ngrok": "ngrok http 8787",
     "test": "c8 mocha test",
     "fix": "eslint --fix '**/*.js'",
     "lint": "eslint '**/*.js'",
-    "register": "node src/register.js",
     "publish": "wrangler deploy",
     "sync": "npx slash-up sync",
     "deploy": "npx slash-up sync && npx wrangler deploy"
   },
   "keywords": [],
-  "author": "Justin Beckwith <justin.beckwith@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@discordjs/builders": "^1.8.2",
