--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,11 @@ name = "mirai-v14"
 main = "./src/main.js"
 compatibility_date = "2023-08-23"
 
+[[d1_databases]]
+binding = "database"
+database_name = "fumi"
+database_id = "475ba08d-4332-43f1-95c9-705f4031e02e"
+
 # [secrets]
 # DISCORD_TOKEN
 # DISCORD_PUBLIC_KEY
